# runIX

./: README.md
C++/: README.md
C++/runIX/: CMakeLists.txt  main.cpp
Examples/: Brine_MultipleComponent.EGRID  Brine_MultipleComponent.afi  Brine_MultipleComponent.gsg  Brine_MultipleComponent_ECL2IX_FM.ixf  Brine_MultipleComponent_ECL2IX_IX.ixf  Brine_MultipleComponent_fm_edits.ixf  Brine_MultipleComponent_reservoir_edits.ixf  Brine_MultipleComponent_restart_366_0.afi  Brine_MultipleComponent_restart_397_0.afi
Examples/Brine_MultipleComponent.0000/fm/: fmworld.ixf
Examples/Brine_MultipleComponent.0000/reservoir1/: formulation.xml  global-options.xml  grid.xml  heatloss.xml  index.xml  ixworld.ixf  new_aquifer.xml  reservoir.gsg  reservoir.xml  root.xml  streamline.xml  version.xml  wells.xml
MATLAB/: README.md  runIX.m
